############################## 
# Process this file with autoconf to produce a configure script.
#
# 10/15/03
# - The first release.
#
# 03/15/04
# - Thanks for Simon Goodall
# - Added the following enable options
#    enable-x3d, enable-opengl, enable-jpeg, enable-png
# - Added CyberX3D version flag using AC_SUBST.
#
############################## 
 
AC_INIT(include/cybergarage/x3d/CyberX3D.h)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)

CX3D_MAJOR_VERSION=1
CX3D_MINOR_VERSION=0
CX3D_MICRO_VERSION=1
CX3D_VERSION=$CX3D_MAJOR_VERSION.$CX3D_MINOR_VERSION.$CX3D_MICRO_VERSION
AC_SUBST(CX3D_VERSION)
AM_INIT_AUTOMAKE(cx3d, $CX3D_VERSION)

############################## 
# Checks for programs.
############################## 

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

############################## 
# Checks for Xerces libraries.
############################## 

AC_ARG_ENABLE(x3d,
    [ --enable-x3d enable X3D [default=yes]],
    [
        if test "$enableval" == "yes"; then
            check_x3d="yes"
        else
            check_x3d="no"
        fi
    ],[
        check_x3d="yes"
    ]
)
if test "$check_x3d" == "yes"; then
XERCES_VERSION=2.3.0
AC_CHECK_HEADERS([xercesc/util/XercesVersion.hpp],[AC_DEFINE([SUPPORT_X3D],1,[X3D])],[AC_MSG_RESULT(no)])
AC_CHECK_LIB(xerces-c,main)
fi

############################## 
# Checks for OpenGL libraries.
############################## 

AC_ARG_ENABLE(opengl,
    [ --enable-opengl enable OpenGL [default=yes]],
    [
        if test "$enableval" == "yes"; then
            check_opengl="yes"
        else
            check_opengl="no"
        fi
    ],[
        check_opengl="yes"
    ]
)
if test "$check_opengl" == "yes"; then
AC_CHECK_HEADER([GL/gl.h],[AC_DEFINE([SUPPORT_OPENGL],1,[OpenGL])])
AC_CHECK_LIB([GL],[glEnable])
AC_CHECK_LIB([GLU],[gluLookAt])
AC_CHECK_HEADER([GL/glut.h],[AC_DEFINE([SUPPORT_GLUT],1,[GLUT]) HAVE_OPEN_GLUT=yes],[HAVE_OPEN_GLUT=no])
if [ test $HAVE_OPEN_GLUT = yes ]; then
	AC_CHECK_LIB([glut],[glutInit],,[LIBS="$LIBS -lglut"])
fi
# Checks for OpenGL libraries (MacOSX).
AC_CHECK_HEADER(
[OpenGL/gl.h],
[AC_DEFINE([SUPPORT_OPENGL],1,[OpenGL]) AC_DEFINE([MACOSX],1,[MacOSX]) LIBS="$LIBS -framework OpenGL"]
)
AC_CHECK_HEADER(
[GLUT/glut.h],
[AC_DEFINE([SUPPORT_GLUT],1,[GLUT]) AC_DEFINE([MACOSX],1,[MacOSX]) LIBS="$LIBS -framework GLUT"]
)
fi

############################## 
# Checks for PNG libraries.
############################## 

AC_ARG_ENABLE(png,
    [  --enable-png		enable png support [default=yes]],
    [
        if test "$enableval" == "yes"; then
            check_png="yes"
        else
            check_png="no"
        fi
    ],[
        check_png="yes"
    ]
)
if test "$check_png" == "yes"; then
AC_CHECK_HEADER([png.h],[AC_DEFINE([SUPPORT_PNG],1,[PNG]) HAVE_PNG=yes],[HAVE_PNG=no])
if [ test $HAVE_PNG = yes ]; then
	AC_CHECK_LIB([png],[png_read_info],,[LIBS="$LIBS -lpng"])
fi
fi

############################## 
# Checks for JPEG libraries.
############################## 

AC_ARG_ENABLE(jpeg,
    [ --enable-jpeg enable jpeg support [default=yes]],
    [
        if test "$enableval" == "yes"; then
            check_jpeg="yes"
        else
            check_jpeg="no"
        fi
    ],[
        check_jpeg="yes"
    ]
)
if test "$check_jpeg" == "yes"; then
AC_CHECK_HEADER([jpeglib.h],[AC_DEFINE([SUPPORT_JPEG],1,[JPEG]) HAVE_JPEG=yes],[HAVE_JPEG=no])
if [ test $HAVE_JPEG = yes ]; then
	AC_CHECK_LIB([jpeg],[jpeg_read_header],,[LIBS="$LIBS -ljpeg"])
fi
fi

############################## 
# Checks for header files.
############################## 

AC_HEADER_STDC
AC_CHECK_HEADERS([float.h memory.h stddef.h stdlib.h string.h sys/time.h sys/timeb.h])
 
############################## 
# Checks for typedefs, structures, and compiler characteristics.
############################## 

#AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME

############################## 
# Checks for library functions.
############################## 

AC_FUNC_ERROR_AT_LINE
#AC_FUNC_MALLOC
#AC_FUNC_REALLOC
AC_CHECK_FUNCS([ftime gettimeofday memset sqrt strdup])

AC_PATH_X
AC_PATH_XTRA

AC_OUTPUT([
Makefile
lib/Makefile
lib/unix/Makefile
sample/Makefile
sample/X3DBrowser/Makefile
sample/X3DBrowser/glut/Makefile
sample/X3DBrowser/glut/unix/Makefile
sample/vrml2x3d/Makefile
sample/vrml2x3d/unix/Makefile
sample/x3d2vrml/Makefile
sample/x3d2vrml/unix/Makefile
])
